feat: custom fetcher methods
